[tool.poetry]
name = "drem"
version = "0.3.1"
description = "https://www.codema.ie/projects/local-projects/dublin-region-energy-master-plan"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"
repository = "https://github.com/codema-dev/drem"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
prefect = "^0.13.0"
requests = "^2.24.0"
tqdm = "^4.48.2"
geopandas = "^0.8.1"
icontract = "^2.3.4"
openpyxl = "^3.0.4"
pyarrow = "^1.0.0"
matplotlib = "^3.3.0"
unidecode = "^1.1.1"
descartes = "^1.1.0"
pygeos = "^0.7.1"
validate_email = "^1.3"
dask = {extras = ["dataframe"], version = "^2.26.0"}
seaborn = "^0.11.0"
loguru = "^0.5.3"
bs4 = "^0.0.1"
lxml = "^4.5.2"
html5lib = "^1.1"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pandas-vet = "^0.2.2"
pytest = "^6.0.1"
ipython = "^7.17.0"
ipdb = "^0.13.3"
pyicontract-lint = "^2.0.0"
black = "^19.10b0"
mypy = "^0.782"
pre-commit = "^2.6.0"
seed-isort-config = "^2.2.0"
pytest-cov = "^2.10.0"
pytest-xdist = "^1.34.0"
pdbpp = "^0.10.2"
Pygments = "^2.7.1"
responses = "^0.12.0"
poetry2conda = "^0.3.0"
flake8 = "^3.8.4"


[tool.poetry.extras]
viz = ["graphviz"]


[tool.poetry2conda]
name = "drem-env"


[tool.poetry2conda.dependencies]
bs4 = { channel = "pip" }
graphviz = { channel = "pip" }
validate_email = { channel = "pip" }
pygeos = { channel = "pip" }
prefect = { channel = "pip" }
pyarrow = { channel = "pip" }
icontract = { channel = "pip" }
loguru = { channel = "pip" }


[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
